; ModuleID = '/home/carl/AnghaBench/linux/drivers/firewire/extr_nosy.c_nosy_release.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/firewire/extr_nosy.c_nosy_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.file = type { %struct.client* }
%struct.client = type { i32, i32, %struct.pcilynx* }
%struct.pcilynx = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.file*)* @nosy_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nosy_release(%struct.inode* %0, %struct.file* %1) #0 {
  %3 = alloca %struct.inode*, align 8
  %4 = alloca %struct.file*, align 8
  %5 = alloca %struct.client*, align 8
  %6 = alloca %struct.pcilynx*, align 8
  store %struct.inode* %0, %struct.inode** %3, align 8
  store %struct.file* %1, %struct.file** %4, align 8
  %7 = load %struct.file*, %struct.file** %4, align 8
  %8 = getelementptr inbounds %struct.file, %struct.file* %7, i32 0, i32 0
  %9 = load %struct.client*, %struct.client** %8, align 8
  store %struct.client* %9, %struct.client** %5, align 8
  %10 = load %struct.client*, %struct.client** %5, align 8
  %11 = getelementptr inbounds %struct.client, %struct.client* %10, i32 0, i32 2
  %12 = load %struct.pcilynx*, %struct.pcilynx** %11, align 8
  store %struct.pcilynx* %12, %struct.pcilynx** %6, align 8
  %13 = load %struct.pcilynx*, %struct.pcilynx** %6, align 8
  %14 = getelementptr inbounds %struct.pcilynx, %struct.pcilynx* %13, i32 0, i32 0
  %15 = call i32 @spin_lock_irq(i32* %14)
  %16 = load %struct.client*, %struct.client** %5, align 8
  %17 = getelementptr inbounds %struct.client, %struct.client* %16, i32 0, i32 1
  %18 = call i32 @list_del_init(i32* %17)
  %19 = load %struct.pcilynx*, %struct.pcilynx** %6, align 8
  %20 = getelementptr inbounds %struct.pcilynx, %struct.pcilynx* %19, i32 0, i32 0
  %21 = call i32 @spin_unlock_irq(i32* %20)
  %22 = load %struct.client*, %struct.client** %5, align 8
  %23 = getelementptr inbounds %struct.client, %struct.client* %22, i32 0, i32 0
  %24 = call i32 @packet_buffer_destroy(i32* %23)
  %25 = load %struct.client*, %struct.client** %5, align 8
  %26 = call i32 @kfree(%struct.client* %25)
  %27 = load %struct.pcilynx*, %struct.pcilynx** %6, align 8
  %28 = call i32 @lynx_put(%struct.pcilynx* %27)
  ret i32 0
}

declare dso_local i32 @spin_lock_irq(i32*) #1

declare dso_local i32 @list_del_init(i32*) #1

declare dso_local i32 @spin_unlock_irq(i32*) #1

declare dso_local i32 @packet_buffer_destroy(i32*) #1

declare dso_local i32 @kfree(%struct.client*) #1

declare dso_local i32 @lynx_put(%struct.pcilynx*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
